# tg-pm-gatekeeper

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  compose.yaml  deny-domains.example.txt  pyproject.toml  requirements-build.txt  requirements-quality.txt  requirements.txt
.github/workflows/: ci.yml
deploy/: bootstrap-host.sh
docs/: RELEASE.md  architecture.md  deployment.md
scripts/: dashboard-tunnel.sh  generate_dataset_key.py  generate_evidence_key.py  generate_hmac_key.py  generate_review_key.py  generate_session.py  initialize.py  review-tunnel.sh
src/tg_pm_gatekeeper/: __init__.py  cli.py  config.py  crypto.py  dataset.py  evidence.py  logging_config.py  main.py  message_facts.py  policy.py  restriction_actions.py  review_admin.py  rules.py  service.py  store.py  telegram_adapter.py
tests/: __init__.py  test_cli.py  test_crypto.py  test_dataset.py  test_evidence.py  test_initialize.py  test_main.py  test_restriction_actions.py  test_review_admin.py  test_review_tunnel.py  test_rules.py  test_service.py  test_store.py  test_telegram_adapter.py
