[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-pm-gatekeeper"
version = "0.1.0"
description = "Safety-first Telegram private-message gatekeeper"
requires-python = ">=3.13,<3.14"
dependencies = [
  "Telethon==1.44.0",
  "pyaes==1.6.1",
  "pyasn1==0.6.3",
  "rsa==4.9.1",
]

[project.scripts]
tg-pm-gatekeeper = "tg_pm_gatekeeper.main:main"
tg-pm-gatekeeper-cli = "tg_pm_gatekeeper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
