[build-system]
requires = ["setuptools==83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-pm-gatekeeper"
version = "0.1.0"
description = "Safety-first Telegram private-message gatekeeper"
requires-python = ">=3.14,<3.15"
license = "MPL-2.0"
dependencies = [
  "cryptography==49.0.0",
  "cffi==2.0.0",
  "pycparser==3.0",
  "Telethon==1.44.0",
  "pyaes==1.6.1",
  "pyasn1==0.6.3",
  "rsa==4.9.1",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S108", "S603"]

[project.scripts]
tg-pm-gatekeeper = "tg_pm_gatekeeper.main:main"
tg-pm-gatekeeper-cli = "tg_pm_gatekeeper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
